--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@webgpu/types": "^0.1.44",
     "typescript": "^5.5.3",
     "vite": "^5.4.0"
+  },
+  "dependencies": {
+    "gpu-matrix": "^0.0.0",
+    "wgpu-matrix": "^3.0.2"
   }
 }
